# app-gateway2

./: .dockerignore  .env  .gitignore  .mirror_sync_note.txt  BRANCH_REVIEW_cga-cm130bb936.md  COMMIT_PUSH_BLOCKED.md  Dockerfile  ErrorUtils.h  Ids.h  Procfile  README.md  TESTING.md  UtilsLogging.h  UtilsLoggingAliases.h  WsManager.h  build_plugin_appgateway.result.txt  build_plugin_appgateway.sh  index.js  package-lock.json  package.json  run.sh  server.js  start.sh
Supporting_Files/Ripple_Badger_Extn/: Cargo.toml  README.md  build.rs
Supporting_Files/Ripple_Badger_Extn/handlers/: badger_device_info.rs
Supporting_Files/Ripple_Badger_Extn/src/: authorizer.rs  badger_ffi.rs  badger_state.rs  main.rs
Tests/L1Tests/: CMakeLists.txt
app-gateway/: CMakeLists.txt  IApp2AppProvider.h  IAppGateway.h  UtilsLogging.h  compatibility.cmake  fb-app-gateway_git.bb
app-gateway/App2AppProvider/: App2AppProvider.conf.in  App2AppProvider.config  App2AppProvider.cpp  App2AppProvider.h  App2AppProviderImplementation.cpp  App2AppProviderImplementation.h  CorrelationMap.cpp  CorrelationMap.h  GatewayClient.h  Module.h  ProviderRegistry.cpp  ProviderRegistry.h
app-gateway/AppGateway/: AppGateway.conf.in  AppGateway.config  AppGateway.cpp  AppGateway.h  AppGatewayImplementation.cpp  AppGatewayImplementation.h  AppGatewayResponderImplementation.cpp  AppGatewayResponderImplementation.h  CMakeLists.txt  ConnectionRegistry.cpp  ConnectionRegistry.h  GatewayClient.cpp  GatewayClient.h  GatewayWebSocket.cpp  GatewayWebSocket.h  IAppGateway.h  Module.h  PermissionManager.h  RequestRouter.cpp  RequestRouter.h  ResolutionStore.cpp  ResolutionStore.h  Resolver.cpp  Resolver.h  appGatewayConfig.json
app-gateway/AppGateway/l0test/: AppGatewayTest.cpp  AppGateway_Init_DeinitTests.cpp  AppGateway_JsonRpcResolveTests.cpp  CMakeLists.txt  Makefile  README.md  ServiceMock.h  run_l0_coverage.sh
app-gateway/AppGateway/resolutions/: resolution.badger.json  resolution.base.json  resolution.fbcommon.json
app-gateway/Badger/: Badger.cpp  Badger.h  BadgerTypes.h  CMakeLists.txt  Module.h
app-gateway/Badger/Delegate/: AdvertisingDelegate.h  AuthServiceDelegate.h  BadgerMetricsDelegate.cpp  BadgerMetricsDelegate.h  (+13 more)
app-gateway/DeviceBridge/: CHANGELOG.md  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  DeviceBridge.conf.in  DeviceBridge.config  DeviceBridge.cpp  DeviceBridge.h  DeviceBridge.json  DeviceBridgePlugin.json  DeviceBridgeUtils.cpp  DeviceBridgeUtils.h  IConnectionStatusListener.h  IDeviceBridgeProxy.h  Module.h  README.md
app-gateway/FbCommon/: CMakeLists.txt  FbCommon.conf.in  FbCommon.cpp  FbCommon.h  FbCommonImplementation.cpp  FbCommonImplementation.h
app-gateway/FbDiscovery/: CMakeLists.txt  FbDiscovery.conf.in  FbDiscovery.config  FbDiscovery.cpp  FbDiscovery.h  FbDiscoveryImplementation.cpp  FbDiscoveryImplementation.h  Module.h
app-gateway/FbMetrics/: CMakeLists.txt  FbMetrics.conf.in  FbMetrics.config  FbMetrics.cpp  FbMetrics.h  FbMetricsImplementation.cpp  FbMetricsImplementation.h  Module.h
app-gateway/FbPrivacy/: CMakeLists.txt  FbPrivacy.conf.in  FbPrivacy.config  FbPrivacy.cpp  FbPrivacy.h  FbPrivacyImplementation.cpp  FbPrivacyImplementation.h  Module.h
app-gateway/FbSettings/: CMakeLists.txt  FbSettings.cpp  FbSettings.h  FbSettingsImplementation.cpp  FbSettingsImplementation.h  README.md
app-gateway/L1_L2_Testing/: ADR-001-L1-L2-Testing-Strategy.md  ADR-002-Test-Coverage-Requirements.md
app-gateway/LaunchDelegate/: CMakeLists.txt  LaunchDelegate.config  LaunchDelegate.cpp  LaunchDelegate.h  LifecycleManagement.cpp  ProviderDelegate.cpp  ProviderDelegate.h
app-gateway/OttServices/: CMakeLists.txt  IOttServices.h  Module.h  OttPermissionCache.cpp  OttPermissionCache.h  OttServices.conf.in  OttServices.config  OttServices.cpp  OttServices.h  OttServicesImplementation.cpp  OttServicesImplementation.h  PermissionsClient.cpp  PermissionsClient.h  TokenCache.cpp  TokenCache.h  TokenClient.cpp  TokenClient.h  Version.h  ott_token.proto  permission_service.grpc.pb.cc  permission_service.grpc.pb.h  permission_service.proto
app-gateway/Privacy/: CHANGELOG.md  CMakeLists.txt  Privacy.conf.in  Privacy.config  Privacy.cpp  Privacy.h  Privacy.json  PrivacyPlugin.json
app-gateway/XvpClient/: CMakeLists.txt  Module.h  XvpClient.conf.in  XvpClient.config  XvpClient.cpp  XvpClient.h  xvpClientConfig.json
app-gateway/cmake/: CompileSettingsDebugConfig.cmake  FindCompileSettingsDebug.cmake  FindDefinitions.cmake  FindPlugins.cmake  ThunderConfigHelpers.cmake  WriteConfigCompat.cmake
app-gateway/helpers/: AudioUtils.h  BaseEventDelegate.h  ErrorUtils.h  ObjectUtils.h  README.md  UtilsJsonRpc.h  UtilsJsonrpcDirectLink.h
app-gateway/interfaces/: IAnalytics.h  IApp2AppProvider.h  IAppGateway.h  IAppNotifications.h  IFbMetrics.h  IFbSettings.h  ILaunchDelegate.h  INetworkManager.h  IOttServices.h  IPrivacy.h  IUserSettings.h  definitions.h
app-gateway/scripts/: appgateway_l0_coverage.sh
app-gateway/tests/: CMakeLists.txt  test_appgateway.cpp  test_audio_utils.cpp  test_fbcommon.cpp  test_ottpermissioncache.cpp
app-gateway2_testing/: CMakeLists.txt
app-gateway2_testing/App2AppProvider/: App2AppProvider.conf.in  App2AppProvider.config  App2AppProvider.cpp  App2AppProvider.h  App2AppProviderImplementation.cpp  App2AppProviderImplementation.h  IApp2AppProvider.h  Module.cpp  Module.h
app-gateway9/app-gateway/: CMakeLists.txt  README.md
plugin/AppGateway/: AppGateway.cpp  AppGateway.h  AppGatewayImplementation.cpp  AppGatewayImplementation.h  AppGatewayResponderImplementation.cpp  AppGatewayResponderImplementation.h  CMakeLists.txt  ContextConversionHelpers.h  ContextUtils.h  ErrorUtils.h  IAppGateway.h  IMMUTABLE_UPSTREAM.md  Module.h  ObjectUtils.h  Resolver.cpp  StringUtils.h  Utils.h  UtilsCallsign.h  UtilsConnections.h  UtilsFirebolt.h  UtilsJsonrpcDirectLink.h  UtilsLogging.h  WsManager.h
plugin/OttServices/: CMakeLists.txt  Module.cpp  Module.h  OttServices.conf.in  OttServices.cpp  OttServices.h  OttServicesImplementation.cpp  OttServicesImplementation.h
(+6687 files in other folders)
