[package]
name = "badger"
version = "1.16.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sysd = []
mock = []
test = ["mock"]
local_dev = []
[lib]
crate-type = ["cdylib"]

[[bin]]
 name = "badger"
 path = "src/main.rs"

[dependencies]
serde.workspace = true
jsonrpsee = { workspace = true, features = [ "macros", "jsonrpsee-core"] }
ripple_sdk = { workspace = true, features = ["full"]}
thunder_ripple_sdk = { path = "../Ripple/device/thunder_ripple_sdk"}
base64 = {workspace = true, features=["alloc"]}
cryptoxide = { version = "0.4.2", default-features = false, features = ["sha1"] }
chrono = { workspace = true, features = ["clock"]}
tokio = { workspace = true, features = ["macros", "sync", "rt"] }
lazy_static = "1.5.0"

[dev-dependencies]
ripple_sdk = { workspace = true, features=["full", "mock"]}
rstest = "0.18.0"
async-std = { version = "1.5", features = ["attributes"] }

[build-dependencies]
vergen = "1"